<resources>
    <string name="app_name">教务助手</string>
    <string name="username_edt">学号</string>
    <string name="password_edt">密码</string>
    <string name="checkcode_edt">验证码</string>
    <string name="checkcode_btn">获取验证码</string>
    <string name="login_btn">登录</string>
    <string name="nav_kbcx">课表查询</string>
    <string name="nav_cjcx">成绩查询</string>
    <string name="nav_setting">系统设置</string>
    <string name="nav_sendmessage">给我留言</string>
    <string name="toolbar_setting">退出</string>
    <string name="drawer_open">Open DrawerLayout</string>
    <string name="drawer_close">Close DrawerLayout</string>
    <string name="cardview_content_title">加入我们</string>
    <string name="cardview_content_string">发送相关信息到cyj_think@163.com，我们一起来做点有趣的事</string>
    <string name="cjcx_content_xn">学年:</string>
    <string name="cjcx_content_xq">学期:</string>
    <string name="cjcx_content_kcdm">课程代码:</string>
    <string name="cjcx_content_kcmc">课程名称:</string>
    <string name="cjcx_content_kcxz">课程性质:</string>
    <string name="cjcx_content_kcgs">课程归属:</string>
    <string name="cjcx_content_xf">学分:</string>
    <string name="cjcx_content_jd">绩点:</string>
    <string name="cjcx_content_cj">成绩:</string>
    <string name="cjcx_content_bkcj">补考成绩:</string>
    <string name="cjcx_content_cxcj">重修成绩:</string>
    <string name="cjcx_content_kkxy">开课学院:</string>
</resources>
